Added max depth

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,5 +92,7 @@
         "valarray": "cpp",
         "variant": "cpp",
         "filesystem": "cpp"
-    }
+    },
+    "editor.formatOnSave": false,
+    "editor.formatOnSaveMode": "modificationsIfAvailable"
 }
